[gd_scene load_steps=9 format=4 uid="uid://cfsev1vlxjqho"]

[ext_resource type="PackedScene" uid="uid://bvn8pr4goe85w" path="res://models/hut.glb" id="1_5eshu"]
[ext_resource type="Script" path="res://scripts/hut_door_interior.gd" id="2_5dcmh"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ssafs"]

[sub_resource type="ArrayMesh" id="ArrayMesh_8ejhn"]
_surfaces = [{
"aabb": AABB(-1.96593, -0.125, -1.96593, 3.93185, 0.25, 3.93185),
"format": 34359742465,
"index_count": 276,
"index_data": PackedByteArray("AAADAAEAAAACAAMABQAaAAQABQAbABoABAAHAAUABAAGAAcABwAvAAkABwAtAC8ACAALAAkACAAKAAsADQAqAAwADQArACoADAAPAA0ADAAOAA8AEQAmABAAEQAnACYAEAATABEAEAASABMAEwAjABUAEwAhACMABQABAAMAAQAVABcAFQARABMAEQANAA8ADQAJAAsACQAFAAcABQAVAAEAFQANABEADQAFAAkAFQAFAA0AFAAXABUAFAAWABcAAAAeABYAAAAcAB4AFgACAAAAAgAGAAQABgAKAAgACgAOAAwADgASABAAEgAWABQAFgAGAAIABgAOAAoADgAWABIABgAWAA4AGAAbABkAGAAaABsABAAYAAIABAAaABgAAwAbAAUAAwAZABsAAgAZAAMAAgAYABkAHgAdAB8AHgAcAB0AAQAcAAAAAQAdABwAFwAdAAEAFwAfAB0AFgAfABcAFgAeAB8AIAAjACEAIAAiACMAEgAhABMAEgAgACEAFQAiABQAFQAjACIAFAAgABIAFAAiACAAJAAnACUAJAAmACcAEAAkAA4AEAAmACQADwAnABEADwAlACcADgAlAA8ADgAkACUAKAArACkAKAAqACsADAAoAAoADAAqACgACwArAA0ACwApACsACgApAAsACgAoACkALAAvAC0ALAAuAC8ABgAtAAcABgAsAC0ACQAuAAgACQAvAC4ACAAsAAYACAAuACwA"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 48,
"vertex_data": PackedByteArray("AAAAAAAAAL4AAIC/AAAAAAAAAD4AAIC/AAAAPwAAAL7Xs12/AAAAPwAAAD7Xs12/17NdPwAAAL4AAAC/17NdPwAAAD4AAAC/AACAPwAAAL4AAACAAACAPwAAAD4AAACA17NdPwAAAL4AAAA/17NdPwAAAD4AAAA/AAAAPwAAAL7Xs10/AAAAPwAAAD7Xs10/AAAAAAAAAL4AAIA/AAAAAAAAAD4AAIA/AAAAvwAAAL7Xs10/AAAAvwAAAD7Xs10/17NdvwAAAL4AAAA/17NdvwAAAD4AAAA/AACAvwAAAL4AAACAAACAvwAAAD4AAACA17NdvwAAAL4AAAC/17NdvwAAAD4AAAC/AAAAvwAAAL7Xs12/AAAAvwAAAD7Xs12/eoKaPwAAAL5mXMm/eoKaPwAAAD5mXMm/ZlzJPwAAAL56gpq/ZlzJPwAAAD56gpq/74OEvgAAAL51o/u/74OEvgAAAD51o/u/+EFCvwAAAL5gfeq/+EFCvwAAAD5gfeq/daP7vwAAAL7vg4S+daP7vwAAAD7vg4S+YH3qvwAAAL74QUK/YH3qvwAAAD74QUK/eoKavwAAAL5mXMk/eoKavwAAAD5mXMk/ZlzJvwAAAL56gpo/ZlzJvwAAAD56gpo/+EFCPwAAAL5gfeo/+EFCPwAAAD5gfeo/74OEPgAAAL51o/s/74OEPgAAAD51o/s/daP7PwAAAL7vg4Q+daP7PwAAAD7vg4Q+YH3qPwAAAL74QUI/YH3qPwAAAD74QUI/")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_bj2qg"]
resource_name = "hut_Cylinder"
_surfaces = [{
"aabb": AABB(-1.96593, -0.125, -1.96593, 3.93185, 0.25, 3.93185),
"attribute_data": PackedByteArray("AABAP1yPAj8AAIA/AAAAPwAAgD8AAAA/AACAPlyPAj8AAIA/AAAAAAAAgD8AAAAAUrheP5nKCj+rqmo/AAAAP6uqaj8AAAA/pHC9PpnKCj+rqmo/AAAAAKuqaj8AAAAAZzV1P65HIT9WVVU/AAAAP1ZVVT8AAAA/zmrqPq5HIT9WVVU/AAAAAFZVVT8AAAAApHB9PwAAQD8BAEA/AAAAPwEAQD8AAAA/SOH6PgAAQD8BAEA/AAAAAAEAQD8AAAAAZzV1P1K4Xj+sqio/AAAAP6yqKj8AAAA/zmrqPlK4Xj+sqio/AAAAAKyqKj8AAAAAUrheP2c1dT9XVRU/AAAAP1dVFT8AAAA/pHC9Pmc1dT9XVRU/AAAAAFdVFT8AAAAAAABAP6RwfT8CAAA/AAAAPwIAAD8AAAA/AACAPqRwfT8CAAA/AAAAAAIAAD8AAAAArkchP2c1dT9ZVdU+AAAAP1lV1T4AAAA/uB4FPmc1dT9ZVdU+AAAAAFlV1T4AAAAAmcoKP1K4Xj+uqqo+AAAAP66qqj4AAAA/lKksPVK4Xj+uqqo+AAAAAK6qqj4AAAAAXI8CPwAAQD8DAIA+AAAAPwMAgD4AAAA/ENcjPAAAQD8DAIA+AAAAAAMAgD4AAAAAmcoKP65HIT+wqio+AAAAP7CqKj4AAAA/lKksPa5HIT+wqio+AAAAALCqKj4AAAAArkchP5nKCj+1qqo9AAAAP7Wqqj0AAAA/uB4FPpnKCj+1qqo9AAAAALWqqj0AAAAAUrheP5nKCj+rqmo/AAAAP6uqaj8AAAA/pHC9PpnKCj+rqmo/AAAAAKuqaj8AAAAAZzV1P65HIT9WVVU/AAAAP1ZVVT8AAAA/zmrqPq5HIT9WVVU/AAAAAFZVVT8AAAAAAABAP1yPAj8AAIA/AAAAPwAAoDMAAAA/AACAPlyPAj8AAIA/AAAAAAAAoDMAAAAArkchP5nKCj+1qqo9AAAAP7Wqqj0AAAA/uB4FPpnKCj+1qqo9AAAAALWqqj0AAAAAXI8CPwAAQD8DAIA+AAAAPwMAgD4AAAA/ENcjPAAAQD8DAIA+AAAAAAMAgD4AAAAAmcoKP65HIT+wqio+AAAAP7CqKj4AAAA/lKksPa5HIT+wqio+AAAAALCqKj4AAAAArkchP2c1dT9ZVdU+AAAAP1lV1T4AAAA/uB4FPmc1dT9ZVdU+AAAAAFlV1T4AAAAAmcoKP1K4Xj+uqqo+AAAAP66qqj4AAAA/lKksPVK4Xj+uqqo+AAAAAK6qqj4AAAAAUrheP2c1dT9XVRU/AAAAP1dVFT8AAAA/pHC9Pmc1dT9XVRU/AAAAAFdVFT8AAAAAAABAP6RwfT8CAAA/AAAAPwIAAD8AAAA/AACAPqRwfT8CAAA/AAAAAAIAAD8AAAAApHB9PwAAQD8BAEA/AAAAPwEAQD8AAAA/SOH6PgAAQD8BAEA/AAAAAAEAQD8AAAAAZzV1P1K4Xj+sqio/AAAAP6yqKj8AAAA/zmrqPlK4Xj+sqio/AAAAAKyqKj8AAAAA"),
"format": 34359742487,
"index_count": 276,
"index_data": PackedByteArray("AQAKAAQAAQAHAAoAEABPAA0AEABSAE8ADgAXABEADgAUABcAFQCNABsAFQCHAI0AGQAiABwAGQAfACIAKQCAACYAKQCDAIAAJQAvACgAJQAsAC8ANAB0ADEANAB3AHQAMgA7ADUAMgA4ADsAOQBpAD8AOQBjAGkADwADAAkAAwA/AEUAPwAzADkAMwAnAC0AJwAbACEAGwAPABUADwA/AAMAPwAnADMAJwAPABsAPwAPACcAPgBGAEEAPgBDAEYAAABaAEIAAABUAFoAQgAGAAAABgASAAwAEgAeABgAHgAqACQAKgA2ADAANgBCADwAQgASAAYAEgAqAB4AKgBCADYAEgBCACoASQBTAEwASQBQAFMADABIAAYADABOAEgACQBRAA8ACQBLAFEACABNAAsACABKAE0AWwBZAF4AWwBWAFkABQBVAAIABQBYAFUARQBXAAMARQBdAFcARABfAEcARABcAF8AYgBrAGUAYgBoAGsANwBkADoANwBhAGQAQABnAD0AQABqAGcAPABgADYAPABmAGAAbgB2AHEAbgBzAHYAMABsACoAMAByAGwALQB1ADMALQBvAHUAKwBwAC4AKwBtAHAAeQCCAHwAeQB/AIIAJAB4AB4AJAB+AHgAIQCBACcAIQB7AIEAIAB9ACMAIAB6AH0AhgCOAIkAhgCLAI4AEwCIABYAEwCFAIgAHQCMABoAHQCPAIwAGACEABIAGACKAIQA"),
"material": SubResource("StandardMaterial3D_ssafs"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 144,
"vertex_data": PackedByteArray("AAAAAAAAAL4AAIC/AAAAAAAAAL4AAIC/AAAAAAAAAL4AAIC/AAAAAAAAAD4AAIC/AAAAAAAAAD4AAIC/AAAAAAAAAD4AAIC/AAAAPwAAAL7Xs12/AAAAPwAAAL7Xs12/AAAAPwAAAL7Xs12/AAAAPwAAAD7Xs12/AAAAPwAAAD7Xs12/AAAAPwAAAD7Xs12/17NdPwAAAL4AAAC/17NdPwAAAL4AAAC/17NdPwAAAL4AAAC/17NdPwAAAD4AAAC/17NdPwAAAD4AAAC/17NdPwAAAD4AAAC/AACAPwAAAL4AAACAAACAPwAAAL4AAACAAACAPwAAAL4AAACAAACAPwAAAD4AAACAAACAPwAAAD4AAACAAACAPwAAAD4AAACA17NdPwAAAL4AAAA/17NdPwAAAL4AAAA/17NdPwAAAL4AAAA/17NdPwAAAD4AAAA/17NdPwAAAD4AAAA/17NdPwAAAD4AAAA/AAAAPwAAAL7Xs10/AAAAPwAAAL7Xs10/AAAAPwAAAL7Xs10/AAAAPwAAAD7Xs10/AAAAPwAAAD7Xs10/AAAAPwAAAD7Xs10/AAAAAAAAAL4AAIA/AAAAAAAAAL4AAIA/AAAAAAAAAL4AAIA/AAAAAAAAAD4AAIA/AAAAAAAAAD4AAIA/AAAAAAAAAD4AAIA/AAAAvwAAAL7Xs10/AAAAvwAAAL7Xs10/AAAAvwAAAL7Xs10/AAAAvwAAAD7Xs10/AAAAvwAAAD7Xs10/AAAAvwAAAD7Xs10/17NdvwAAAL4AAAA/17NdvwAAAL4AAAA/17NdvwAAAL4AAAA/17NdvwAAAD4AAAA/17NdvwAAAD4AAAA/17NdvwAAAD4AAAA/AACAvwAAAL4AAACAAACAvwAAAL4AAACAAACAvwAAAL4AAACAAACAvwAAAD4AAACAAACAvwAAAD4AAACAAACAvwAAAD4AAACA17NdvwAAAL4AAAC/17NdvwAAAL4AAAC/17NdvwAAAL4AAAC/17NdvwAAAD4AAAC/17NdvwAAAD4AAAC/17NdvwAAAD4AAAC/AAAAvwAAAL7Xs12/AAAAvwAAAL7Xs12/AAAAvwAAAL7Xs12/AAAAvwAAAD7Xs12/AAAAvwAAAD7Xs12/AAAAvwAAAD7Xs12/eoKaPwAAAL5mXMm/eoKaPwAAAL5mXMm/eoKaPwAAAL5mXMm/eoKaPwAAAD5mXMm/eoKaPwAAAD5mXMm/eoKaPwAAAD5mXMm/ZlzJPwAAAL56gpq/ZlzJPwAAAL56gpq/ZlzJPwAAAL56gpq/ZlzJPwAAAD56gpq/ZlzJPwAAAD56gpq/ZlzJPwAAAD56gpq/74OEvgAAAL51o/u/74OEvgAAAL51o/u/74OEvgAAAL51o/u/74OEvgAAAD51o/u/74OEvgAAAD51o/u/74OEvgAAAD51o/u/+EFCvwAAAL5gfeq/+EFCvwAAAL5gfeq/+EFCvwAAAL5gfeq/+EFCvwAAAD5gfeq/+EFCvwAAAD5gfeq/+EFCvwAAAD5gfeq/daP7vwAAAL7vg4S+daP7vwAAAL7vg4S+daP7vwAAAL7vg4S+daP7vwAAAD7vg4S+daP7vwAAAD7vg4S+daP7vwAAAD7vg4S+YH3qvwAAAL74QUK/YH3qvwAAAL74QUK/YH3qvwAAAL74QUK/YH3qvwAAAD74QUK/YH3qvwAAAD74QUK/YH3qvwAAAD74QUK/eoKavwAAAL5mXMk/eoKavwAAAL5mXMk/eoKavwAAAL5mXMk/eoKavwAAAD5mXMk/eoKavwAAAD5mXMk/eoKavwAAAD5mXMk/ZlzJvwAAAL56gpo/ZlzJvwAAAL56gpo/ZlzJvwAAAL56gpo/ZlzJvwAAAD56gpo/ZlzJvwAAAD56gpo/ZlzJvwAAAD56gpo/+EFCPwAAAL5gfeo/+EFCPwAAAL5gfeo/+EFCPwAAAL5gfeo/+EFCPwAAAD5gfeo/+EFCPwAAAD5gfeo/+EFCPwAAAD5gfeo/74OEPgAAAL51o/s/74OEPgAAAL51o/s/74OEPgAAAL51o/s/74OEPgAAAD51o/s/74OEPgAAAD51o/s/74OEPgAAAD51o/s/daP7PwAAAL7vg4Q+daP7PwAAAL7vg4Q+daP7PwAAAL7vg4Q+daP7PwAAAD7vg4Q+daP7PwAAAD7vg4Q+daP7PwAAAD7vg4Q+YH3qPwAAAL74QUI/YH3qPwAAAL74QUI/YH3qPwAAAL74QUI/YH3qPwAAAD74QUI/YH3qPwAAAD74QUI/YH3qPwAAAD74QUI//38AAP///z////LkAACFzf//C5v///+//3///////7////LkAACFzf//C5v///+//38AAP///z////LkAACFzQAA/7////+//3///////7////LkAACFzQAA/7////+//38AAP///z//v/9/////P///C5sAAHjy/3///////7//v/9/////P///C5sAAHjy/38AAP///z////Lk////v///C5sAAHjy/3///////7////Lk////v///C5sAAHjy/38AAP///z//v/9/////3/Nk/3////8//3///////7//v/9/////3/Nk/3////8//38AAP///z//v/9/////3///C5v///+//3///////7//v/9/////3///C5v///+//38AAP///z/zZP9/8uT/vwwb/3////8//3///////7/zZP9/8uT/vwwb/3////8//38AAP///z//v/9/////P/Nk/3/y5P+//3///////7//v/9/////P/Nk/3/y5P+//38AAP///z8AAP+/////vwwb/38Lm/+//3///////78AAP+/////vwwb/38Lm/+//38AAP///z/zZP9/////Pwwb/38Lm/+//3///////7/zZP9/////Pwwb/38Lm/+//38AAP///z////Lk////vwAA/7//P/+//3///////7////Lk////vwAA/7//P/+//38AAP///z8AAP+//z//vwwb/3////8//3///////78AAP+//z//vwwb/3////8//38AAP///7////+/AAD/3wAA/7////+//3///////7////+/AAD/3wAA/7////+//38AAP///7//v/9/////P////78AAP/f/3///////7//v/9/////P////78AAP/f/38AAP///7///wub////vwAA8uQMG/+//3///////7///wub////vwAA8uQMG/+//38AAP///78AAPLkDBv/vwwb/3////8//3///////78AAPLkDBv/vwwb/3////8//38AAP///7/zZP9/////PwAAC5vzZP+//3///////7/zZP9/////PwAAC5vzZP+//38AAP///7////Lk////vwAAC5vzZP+//3///////7////Lk////vwAAC5vzZP+//38AAP///7//v/9/////P/8//3//v/+//3///////7//v/9/////P/8//3//v/+//38AAP///7//P/9//7//vwAA/7////+//3///////7//P/9//7//vwAA/7////+//38AAP///78Lm/9///+Fzf//C5v///+//3///////78Lm/9///+Fzf//C5v///+//38AAP///78Lm/9///+FzQwb/3////8//3///////78Lm/9///+FzQwb/3////8//38AAP///7////Lk////v/Lk/3///3jy/3///////7////Lk////v/Lk/3///3jy/38AAP///7/y5P9///948vNk/3////8//3///////7/y5P9///948vNk/3////8/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_8ejhn")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wwhlu"]
cull_mode = 1
shading_mode = 0

[sub_resource type="BoxShape3D" id="BoxShape3D_ut4cd"]
size = Vector3(8.61163, 2.75523, 8.7157)

[sub_resource type="SphereShape3D" id="SphereShape3D_tghnv"]
radius = 0.75

[node name="HutDoorInterior" instance=ExtResource("1_5eshu")]
script = ExtResource("2_5dcmh")

[node name="CylinderOutline" type="MeshInstance3D" parent="." index="2"]
transform = Transform3D(0.0148165, 0.169353, 0, -0.169353, 0.0148165, 0, 0, 0, 0.17, 5.10706, 0.835817, 0)
cast_shadow = 0
mesh = SubResource("ArrayMesh_bj2qg")
skeleton = NodePath("")
surface_material_override/0 = SubResource("StandardMaterial3D_wwhlu")

[node name="StaticBody3D" type="StaticBody3D" parent="." index="3"]
transform = Transform3D(0.0148165, 0.169353, 0, -0.169353, 0.0148165, 0, 0, 0, 0.17, 5.10706, 0.835817, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.401031, 0.877613, 0.0525511)
shape = SubResource("BoxShape3D_ut4cd")

[node name="DoorInteractArea" type="Area3D" parent="." index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.03657, 0.828785, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="DoorInteractArea" index="0"]
shape = SubResource("SphereShape3D_tghnv")

[connection signal="area_entered" from="DoorInteractArea" to="." method="_area_entered_area"]
[connection signal="area_exited" from="DoorInteractArea" to="." method="_area_exited_area"]
